--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/fonts/hand_mono.ttf":["assets/fonts/hand_mono.ttf"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/fonts/hand_mono.ttf":["assets/fonts/hand_mono.ttf"],"assets/images/einstein.png":["assets/images/einstein.png"],"assets/images/pozadi_predmety.png":["assets/images/pozadi_predmety.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
