--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "connect_four_online_2",
-    "short_name": "connect_four_online_2",
+    "name": "doucka",
+    "short_name": "doucka",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
